[package]
name = "winpipe"
version = "0.1.0"
authors = ["TyPR124 <t.ruckinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["errhandlingapi", "fileapi", "handleapi", "namedpipeapi", "processthreadsapi"] }
winerr = { version = "0.1", path = "../winerr" }
